[#170101233] Replace organization creation with requests creation
